re PR fortran/36476 (ICE: len=* CHARACTER array with separate PARAMETER statement)

2008-06-13  Tobias Burnus  <burnus@net-b.de>

        PR fortran/36476
        * decl.c (do_parm): Handle init expression for len=*.

2008-06-13  Tobias Burnus  <burnus@net-b.de>

        PR fortran/36476
        * gfortran.dg/parameter_array_init_4.f90: New.

From-SVN: r136754